--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/starlight": "^0.20.1",
-    "astro": "^4.3.5",
-    "sharp": "^0.32.5",
     "@astrojs/check": "^0.5.5",
+    "@astrojs/react": "^3.0.10",
+    "@astrojs/starlight": "^0.20.1",
+    "@types/react": "^18.2.58",
+    "@types/react-dom": "^18.2.19",
+    "astro": "^4.3.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sharp": "^0.32.5",
     "typescript": "^5.3.3"
   }
 }
